--- a/pasta_animation/index.html
+++ b/pasta_animation/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pasta Animation</title>
     <link rel="stylesheet" href="main.css" />
-    <script src="script.js"></script>
   </head>
   <body>
     <img
@@ -139,5 +138,7 @@
       <span class="pepper-particles2"></span>
       <span class="pepper-particles3"></span>
     </span>
+    <!-- JavaScript -->
+    <script src="script.js"></script>
   </body>
 </html>
